Revert conan update

--- a/conan_boost_mod/all/dependencies/dependencies-1.70.0.yml
+++ b/conan_boost_mod/all/dependencies/dependencies-1.70.0.yml
@@ -12,12 +12,10 @@ configure_options:
 - graph
 - graph_parallel
 - iostreams
-- json
 - locale
 - log
 - math
 - mpi
-- nowide
 - program_options
 - python
 - random
@@ -29,14 +27,14 @@ configure_options:
 - thread
 - timer
 - type_erasure
-- url
 - wave
 dependencies:
   atomic: []
   chrono:
   - system
   container: []
-  context: []
+  context:
+  - thread
   contract:
   - exception
   - thread
@@ -44,7 +42,9 @@ dependencies:
   - context
   - exception
   - system
-  date_time: []
+  - thread
+  date_time:
+  - serialization
   exception: []
   fiber:
   - context
@@ -52,13 +52,13 @@ dependencies:
   fiber_numa:
   - fiber
   filesystem:
-  - atomic
   - system
   graph:
   - math
   - random
   - regex
   - serialization
+  - test
   graph_parallel:
   - filesystem
   - graph
@@ -68,9 +68,6 @@ dependencies:
   iostreams:
   - random
   - regex
-  json:
-  - container
-  - system
   locale:
   - thread
   log:
@@ -79,13 +76,15 @@ dependencies:
   - date_time
   - exception
   - filesystem
+  - locale
   - random
   - regex
   - system
   - thread
   log_setup:
   - log
-  math: []
+  math:
+  - atomic
   math_c99:
   - math
   math_c99f:
@@ -104,8 +103,6 @@ dependencies:
   mpi_python:
   - mpi
   - python
-  nowide:
-  - filesystem
   numpy:
   - python
   prg_exec_monitor:
@@ -113,6 +110,7 @@ dependencies:
   program_options: []
   python: []
   random:
+  - math
   - system
   regex: []
   serialization: []
@@ -150,8 +148,6 @@ dependencies:
   - prg_exec_monitor
   - test
   - test_exec_monitor
-  url:
-  - system
   wave:
   - filesystem
   - serialization
@@ -186,8 +182,6 @@ libs:
   - boost_graph_parallel
   iostreams:
   - boost_iostreams
-  json:
-  - boost_json
   locale:
   - boost_locale
   log:
@@ -211,8 +205,6 @@ libs:
   - boost_mpi
   mpi_python:
   - boost_mpi_python
-  nowide:
-  - boost_nowide
   numpy:
   - boost_numpy{py_major}{py_minor}
   prg_exec_monitor:
@@ -253,8 +245,6 @@ libs:
   - boost_type_erasure
   unit_test_framework:
   - boost_unit_test_framework
-  url:
-  - boost_url
   wave:
   - boost_wave
   wserialization:
@@ -277,4 +267,4 @@ requirements:
 static_only:
 - boost_exception
 - boost_test_exec_monitor
-version: 1.82.0
+version: 1.70.0
