--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,29 +20,8 @@ jobs:
             CIBW_MANYLINUX_I686_IMAGE: manylinux2014
 
           command: |
-            python3 -m pip install cibuildwheel[uv]==2.19.1
+            python3 -m pip install cibuildwheel==2.17.0
             python3 -m cibuildwheel --output-dir wheelhouse
-      - store_artifacts:
-          path: wheelhouse/
-
-  osx-wheels:
-    working_directory: ~/osx-wheels
-    macos:
-      xcode: 15.4.0
-    resource_class: macos.m1.medium.gen1
-    parameters:
-      python-version:
-        type: string
-    steps:
-      - checkout
-      - run:
-          name: Build the OS X wheels.
-          environment:
-            CIBW_BUILD: cp<< parameters.python-version >>-macosx_arm64
-
-          command: |
-            pip3 install cibuildwheel[uv]==2.19.1
-            cibuildwheel --output-dir wheelhouse
       - store_artifacts:
           path: wheelhouse/
 
@@ -51,10 +30,6 @@ workflows:
   all-tests:
     jobs:
       - linux-arm64-wheels:
-          matrix:
-            parameters:
-              python-version: ["38", "39", "310", "311", "312"]
-      - osx-wheels:
           matrix:
             parameters:
               python-version: ["38", "39", "310", "311", "312"]
