--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,6 +1,6 @@
 build_and_store_wheels: &BUILD_AND_STORE_WHEELS
   install_cibuildwheel_script:
-    - python -m pip install cibuildwheel[uv]==2.19.1
+    - python -m pip install cibuildwheel==2.17.0
     - curl -o /tmp/Python38.pkg https://www.python.org/ftp/python/3.8.10/python-3.8.10-macos11.pkg
     - sudo installer -pkg /tmp/Python38.pkg -target /
     - sh "/Applications/Python 3.8/Install Certificates.command"
